--- a/preamble.tex
+++ b/preamble.tex
@@ -287,6 +287,17 @@
 \newcommand*{\Cpvminitzonesize}{\mathsf{Z}_Z}
 
 % String
+\newcommand*{\Xavailable}{\mathsf{X}_A}
+\newcommand*{\Xbeefy}{\mathsf{X}_B}
+\newcommand*{\Xentropy}{\mathsf{X}_E}
+\newcommand*{\Xfallback}{\mathsf{X}_F}
+\newcommand*{\Xguarantee}{\mathsf{X}_G}
+\newcommand*{\Xannounce}{\mathsf{X}_I}
+\newcommand*{\Xticket}{\mathsf{X}_T}
+\newcommand*{\Xaudit}{\mathsf{X}_U}
+\newcommand*{\Xvalid}{\mathsf{X}_\top}
+\newcommand*{\Xinvalid}{\mathsf{X}_\bot}
+\newcommand*{\Xvalidif}[1]{\mathsf{X}_{#1}}
 
 %%%%%%%%%%%%
 % Simple Universal types (blackboard letters)
