--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -296,14 +296,14 @@ Here, the prime annotation indicates posterior state. Individual components may 
 \subsubsection{Signing Contexts}
 
 \begin{description}
-  \item[$\mathsf{X}_A = \token{\$jam\_available}$] \emph{Ed25519} Availability assurances.
-  \item[$\mathsf{X}_B = \token{\$jam\_beefy}$] \emph{\textsc{bls}} Accumulate-result-root-\textsc{mmr} commitment.
-  \item[$\mathsf{X}_E = \token{\$jam\_entropy}$] On-chain entropy generation.
-  \item[$\mathsf{X}_F = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
-  \item[$\mathsf{X}_G = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
-  \item[$\mathsf{X}_I = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
-  \item[$\mathsf{X}_T = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal.
-  \item[$\mathsf{X}_U = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy.
-  \item[$\mathsf{X}_\top = \token{\$jam\_valid}$] \emph{Ed25519} Judgments for valid work-reports.
-  \item[$\mathsf{X}_\bot = \token{\$jam\_invalid}$] \emph{Ed25519} Judgments for invalid work-reports.
+  \item[$\Xavailable = \token{\$jam\_available}$] \emph{Ed25519} Availability assurances.
+  \item[$\Xbeefy = \token{\$jam\_beefy}$] \emph{\textsc{bls}} Accumulate-result-root-\textsc{mmr} commitment.
+  \item[$\Xentropy = \token{\$jam\_entropy}$] On-chain entropy generation.
+  \item[$\Xfallback = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
+  \item[$\Xguarantee = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
+  \item[$\Xannounce = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
+  \item[$\Xticket = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal.
+  \item[$\Xaudit = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy.
+  \item[$\Xvalid = \token{\$jam\_valid}$] \emph{Ed25519} Judgments for valid work-reports.
+  \item[$\Xinvalid = \token{\$jam\_invalid}$] \emph{Ed25519} Judgments for invalid work-reports.
 \end{description}
