--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -320,6 +320,7 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
     \is{\ps¬alwaysaccers}{\alwaysaccers}
   }
   \!\!\!\!\!\\
+  \label{eq:finalstateaccumulation}
   &\tup{
     \numberofitemsaccumulated, \psX', \deferredtransfers, \lastaccout', \servicegasused
   } \equiv \accseq(g, \justbecameavailable^*, \psX, \alwaysaccers) \\
