--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -231,7 +231,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\activity$] The activity statistics for the validators. % π
   \item[$\ready$] The accumulation queue. % ϑ
   \item[$\accumulated$] The accumulation history. % ξ
-  \item[$\lastaccout$] The most recent Accumulation outputs. See equation \ref{eq:lastaccout}. % θ
+  \item[$\lastaccout$] The most recent Accumulation outputs. See equations \ref{eq:lastaccoutspec} and \ref{eq:finalstateaccumulation}. % θ
 \end{description}
 
 \subsubsection{Virtual Machine components}
