--- a/text/notation.tex
+++ b/text/notation.tex
@@ -1,4 +1,5 @@
-\section{Notational Conventions}\label{sec:notation}
+\section{Notational Conventions}
+\label{sec:notation}
 
 Much as in the Ethereum Yellow Paper, a number of notational conventions are used throughout the present work. We define them here for clarity. The Ethereum Yellow Paper itself may be referred to henceforth as the \emph{YP}.
 
