--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -10,6 +10,7 @@ We retain in state information on the most recent $\Crecenthistorylen$ blocks. T
     \isa{\rh¬reportedpackagehashes}{\dictionary{\hash}{\hash}}
   }}\\
   \beefybelt &\in \sequence{\optional{\hash}} \\
+  \label{eq:lastaccoutspec}
   \lastaccout &\in \sequence{\tup{\serviceid, \hash}}
 \end{align}
 
