--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -165,6 +165,7 @@ We may then define a third dependent term $\sa¬minbalance$, the minimum, or \em
 
 Finally, $\alwaysaccers$ is a small dictionary containing the indices of services which automatically accumulate in each block together with a basic amount of gas with which each accumulates. Formally:
 \begin{align}
+  \label{eq:privilegesspec}
   \privileges \equiv \tuple{
     \isa{\manager}{\serviceid} ,
     \isa{\assigners}{\sequence[\Ccorecount]{\serviceid}} ,
