--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -167,7 +167,7 @@ A work-report is said to become \emph{available} if and only if there are a clea
 \end{align}
 
 This value is utilized in the definition of both $\accountspost$ and $\reportspostguarantees$ which we will define presently as equivalent to $\reportspostjudgement$ except for the removal of items which are either now available or have timed out:
-\begin{align}
+\begin{align}\label{eq:reportspostguaranteesdef}
   \forall \cX \in \coreindex: \reportspostguarantees\subb{\cX} \equiv \begin{cases}
     \none &\when\reports\subb{\cX}_\rs¬workreport \in \justbecameavailable \vee \H_\¬timeslot \ge \reportspostjudgement\subb{\cX}_\rs¬timestamp + \Cassurancetimeoutperiod\\
     \reportspostjudgement\subb{\cX} &\otherwise
